--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     ],
     "require": {
         "php": "^7.1",
+        "backpack/crud": "4.0.*",
         "illuminate/support": "^7.0"
     },
     "require-dev": {
@@ -31,10 +32,7 @@
     "autoload-dev": {
         "psr-4": {
             "Suavy\\LojaForLaravel\\Tests\\": "tests"
-        },
-        "files": [
-            "src/Helpers/ProductHelper.php"
-        ]
+        }
     },
     "scripts": {
         "test": "vendor/bin/phpunit",
