--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require": {
         "php": "^7.1",
         "backpack/crud": "4.0.*",
+        "cartalyst/stripe-laravel": "^12.0",
         "illuminate/support": "^7.0"
     },
     "require-dev": {
