--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "php": "^7.2.5",
         "backpack/crud": "4.1.*",
         "cartalyst/stripe-laravel": "^12.0",
+        "darryldecode/cart": "^4.1",
         "illuminate/support": "^7.0"
     },
     "require-dev": {
