--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require": {
         "php": "^7.2.5",
         "backpack/crud": "4.1.*",
+        "backpack/settings": "^3.0",
         "cartalyst/stripe-laravel": "^12.0",
         "darryldecode/cart": "^4.1",
         "illuminate/support": "^7.0",
