--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     ],
     "require": {
         "php": "^7.2.5",
+        "anahkiasen/former": "^4.4",
         "backpack/crud": "4.1.*",
         "backpack/settings": "^3.0",
         "cartalyst/stripe-laravel": "^12.0",
