--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "php": "^7.2.5",
         "anahkiasen/former": "^4.4",
         "backpack/crud": "4.1.*",
+        "backpack/filemanager": "^1.1",
         "backpack/settings": "^3.0",
         "cartalyst/stripe-laravel": "^12.0",
         "darryldecode/cart": "^4.1",
