--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,11 @@
         "cartalyst/stripe-laravel": "^13.0",
         "darryldecode/cart": "^4.1",
         "illuminate/support": "^8.0",
+        "livewire/livewire": "^2.3",
         "pragmarx/countries": "^0.7.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0",
+        "orchestra/testbench": "^6.0",
         "phpunit/phpunit": "^9.0"
     },
     "autoload": {
